# clustering_docker_test

./: clustering_test.py  docker_test.py  dockerfile  old_df  principal.py  pyproject.toml  test_principal.py
